revert: JDK 21 back to 17, drop virtual threads (AMQP channel conflict, no real benefit)